@@ -21,4 +21,5 @@ _global                     _figlet       _ifconfig     _last         _larch
 _lsof         _mt           _xmlsoft      _elinks       _tidy         _python
 _antiword     _renice       _sablotron    _cdrecord     _aap          _du
 _rar          _vorbis       _subversion   _screen       _nice
+_ecasound     _gpg	    _nmap
 '
