@@ -1,3 +1,11 @@
+2003-12-18  Peter Stephenson  <pws@csr.com>
+
+	* unposted: Config/version.mk, Completion/Unix/Command/.distfiles:
+	zsh-4.0.8.
+
+	* Oliver: 19308: Src/utils.c, Test/C01arith.ztst:
+	fix crash with lonely ## in arithmetic.
+
 2003-12-17  Clint Adams  <clint@zsh.org>
 
 	* Stephen Rüger: 19255: Completion/Debian/Command/_apt: update
